# cair-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: site.yml
examples/seam-removal/: Cargo.toml
examples/seam-removal-cli/: Cargo.toml
examples/seam-removal-cli/src/: main.rs
examples/seam-removal-web/: Cargo.toml  index.html  justfile  style.css
examples/seam-removal-web/src/: main.rs
examples/seam-removal/src/: main.rs
src/: lib.rs
