[package]
name = "cair"
version = "0.1.0"
edition.workspace = true

[workspace]
resolver = "3"
members = ["examples/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
cair.path = "."
image = "0.25"

[dependencies]
image.workspace = true
